# project-library-oauth

./: docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 070c3e00f3bd_create_user_table.py  34bdd274980c_create_project_table.py  5a4323320e2a_create_scope_table.py  85d59395ed10_create_user_oauth_client_table.py  a96e03a4e98d_create_client_scope_table.py  c785326c28f3_create_oauth_clients_table.py
backend/app/: main.py
backend/app/api/: auth.py  auth_code_grant.py  authentication.py  dcr.py  handlers.py
backend/app/api/dependencies/: __init__.py  auth.py
backend/app/api/routes/: auth_code_grant.py  authentication.py  dcr.py  project.py  user.py
backend/app/core/: bcrypt_encrypter.py  database.py  encrypt_pwd.py  redis_instance.py
backend/app/dependencies/: __init__.py  auth.py  oauth_client.py
backend/app/domain/: exceptions.py
backend/app/domain/oauth_client/: oauth_client_domain.py
backend/app/models/: oauth_client.py  project.py  user.py  user_oauth_client.py
backend/app/repositories/oauth_client/: ioauth_client_repository.py  oauth_client_repository.py
backend/app/schemas/: project.py  user.py
backend/app/schemas/auth_code_grant/: auth_code_grant.py
backend/app/schemas/dcr/: dcr.py
backend/app/schemas/user/: user.py
backend/app/services/: exceptions.py
backend/app/services/oauth_client/: ioauth_client_service.py  oauth_client_service.py
frontend/: package-lock.json
frontend/auth-frontend/: package-lock.json  package.json
frontend/client/: package-lock.json  package.json  (+1 more)
(+13 files in other folders)
